--- a/_posts/2017-04-29-mathjax.md
+++ b/_posts/2017-04-29-mathjax.md
@@ -9,5 +9,5 @@ categories: tools
 
 因为Mathjax的使用极为简单，就不再做赘述了，主要记录一下几个很不错的介绍网站
 
-[Ryan Zhao](http://mlworks.cn/posts/introduction-to-mathjax-and-latex-expression/)
-[MathJax basic tutorial and quick reference](https://math.meta.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference/5044)
+* [Ryan Zhao](http://mlworks.cn/posts/introduction-to-mathjax-and-latex-expression/)
+* [MathJax basic tutorial and quick reference](https://math.meta.stackexchange.com/questions/5020/mathjax-basic-tutorial-and-quick-reference/5044)
