--- a/_posts/2018-01-08-base64.md
+++ b/_posts/2018-01-08-base64.md
@@ -1,7 +1,8 @@
 ---
 layout: article
-title: base 64编码
-categories: other
+author: SnailTowardThesun
+title: 算法系列--base 64编码
+categories: 算法系列
 ---
 
 ## base 64简介
